optimization/k8s-automation/k8s-files/acmeair-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-db
  labels:
    app: acmeair-db
spec:
  replicas: 1
  template:
    metadata:
      name: acmeair-db
      labels:
        app: acmeair-db
    spec:
      nodeName: kind-worker
      containers:
        - name: acmeair-db
          image: mongo
          imagePullPolicy: Never
          ports:
            - containerPort: 27017
      restartPolicy: Always
  selector:
    matchLabels:
      app: acmeair-db
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-db
spec:
  selector:
    app: acmeair-db
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: NodePort
