optimization/k8s-automation/k8s-files/acmeair-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-prod
  labels:
    app: acmeair
spec:
  type: NodePort
  ports:
    # prometheus proxy
    - port: 9090
      targetPort: 9090
      name: smarttuning
    - port: 9093
      targetPort: 493
      name: https
    - nodePort: 30080
      port: 8888
      targetPort: 8888
      name: http
  selector:
    app: "acmeair"
    tuning: "false"
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-train
  labels:
    app: acmeair
spec:
  type: NodePort
  ports:
    # prometheus proxy
    - port: 9090
      targetPort: 9090
      name: smarttuning
    - port: 9093
      targetPort: 493
      name: https
      protocol: TCP
    - nodePort: 30088
      port: 8888
      targetPort: 8888
      name: http
  selector:
    app: "acmeair"
    tuning: "true"
