optimization/k8s-automation/k8s-files/acmeair-smarttuning-tuning-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-tuningprod
  labels:
    app: "acmeair"
    tuning: "false"
  annotations:
    # https://github.com/stakater/Reloader
    configmap.reloader.stakater.com/reload: "jvm-config-prod"
spec:
  replicas: 1
  template:
    metadata:
      name: acmeair
      labels:
        app: "acmeair"
        tuning: "false"
    spec:
#      initContainers:
#        - name: init-networking
#          image: smarttuning-init
#          imagePullPolicy: Never
#          securityContext:
#            capabilities:
#              add:
#                - NET_ADMIN
#            privileged: true
#          env:
#            - name: PROXY_PORT
#              value: "8888"
#            - name: SERVICE_PORT
#              value: "80"
      containers:
        - name: proxy
          image: smarttuning-proxy
          imagePullPolicy: Never
          env:
            - name: MAX_CONNECTIONS
              value: "100"
            - name: READ_BUFFER_SIZE
              value: "4096"
            - name: WRITE_BUFFER_SIZE
              value: "4096"
            - name: READ_TIMEOUT
              value: "30"
            - name: WRITE_TIMEOUT
              value: "30"
            - name: MAX_IDLE_CONNECTION_DURATION
              value: "60"
            - name: MAX_CONNECTION_TIMEOUT
              value: "30"
            - name: RESOURCE_USAGE
              value: "FALSE"
            - name: PROXY_PORT
              value: "8888"
            - name: SERVICE_PORT
              value: "80"
            - name: METRICS_PORT
              value: "9090"
            - name: NODE_NAME
              valueFrom:
                fieldRef:
                  fieldPath: spec.nodeName
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: POD_SERVICE_ACCOUNT
              valueFrom:
                fieldRef:
                  fieldPath: spec.serviceAccountName
          ports:
            - containerPort: 8888
            - containerPort: 9090
        - name: service
          image: liberty-acmeair-k8s
          resources:
#            requests:
#              cpu: "1"
#              memory: "2048Mi"
            limits:
              cpu: "4"
              memory: "8192Mi"
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 80
              path: /acmeair-webapp/
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
          envFrom:
            - configMapRef:
                name: acmeair-config-prod
          volumeMounts:
            - mountPath: /etc/acmeair-config
              name: acmeair-config-prod
            - mountPath: /config/jvm.options
              subPath: jvm.options
              name: jvm-config
      volumes:
        - name: acmeair-config-prod
          configMap:
            name: acmeair-config-prod
        - name: jvm-config
          configMap:
            name: jvm-config-prod
  selector:
    matchLabels:
      app: "acmeair"
      tuning: "false"
