optimization/k8s-automation/k8s-files/test_plain.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair-tuning
  labels:
    app: "acmeair"
spec:
  replicas: 1
  template:
    metadata:
      name: acmeair
      labels:
        app: "acmeair"
    spec:
      containers:
        - name: service
          image: liberty-acmeair-k8s
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 80
              path: /acmeair-webapp/
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
          envFrom:
            - configMapRef:
                name: acmeair-config
          volumeMounts:
            - mountPath: /etc/acmeair-config
              name: acmeair-config
            - mountPath: /config/jvm.options
              subPath: jvm.options
              name: jvm-config
      volumes:
        - name: acmeair-config
          configMap:
            name: acmeair-config
        - name: jvm-config
          configMap:
            name: jvm-config-train
  selector:
    matchLabels:
      app: "acmeair"
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair
spec:
  selector:
    app: acmeair
  ports:
    - port: 8888
      targetPort: 80
      nodePort: 30080
      name: app
    - port: 9090
      targetPort: 9090
      nodePort: 30091
      name: admin
  type: NodePort
