optimization/k8s-automation/k8s-files/test_service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smarttuning
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep1
  namespace: smarttuning
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      name: dep1
      labels:
        app: nginx
    spec:
      containers:
        - name: dep1
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80

      restartPolicy: Always
  selector:
    matchLabels:
      app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dep2
  labels:
    app: nginx
spec:
  replicas: 1
  template:
    metadata:
      name: dep2
      labels:
        app: nginx
    spec:
      containers:
        - name: dep2
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
      restartPolicy: Always
  selector:
    matchLabels:
      app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: smarttuning
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30085
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30086
  type: NodePort
---
kind: Service
apiVersion: v1
metadata:
  name: service-y
  namespace: smarttuning
spec:
  type: ExternalName
  externalName: nginx.default.svc.cluster.local
  ports:
    - port: 80
