optimization/k8s-automation/k8s-files/test_traefik.yaml
#
# add prometheus config to scrap envoy
#
apiVersion: v1
kind: ConfigMap
metadata:
  name: traefik-config
data:
  traefik.yaml: |
    entryPoints:
      web:
        address: ":8888"
        forwardedHeaders:
          insecure: true
      metrics:
        address: ":9901"
    api:
      insecure: true
      dashboard: true
      debug: true
    metrics:
      prometheus:
        entryPoint: metrics
        addEntryPointsLabels: true
        addServicesLabels: true
    providers:
      file:
        directory: /etc/traefik/
        filename: "traefik-dynamic.yaml"
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: traefik-dynamic
data:
  traefik-dynamic.yaml: |
    http:
      routers:
        # Define a connection between requests and services
        to-app:
          entryPoints:
            - "web"
          rule: "PathPrefix(`/`)"
          # If the rule matches, forward to the app service (declared below)
          service: app
      services:
        # Define how to reach an existing service on our infrastructure
        app:
          loadBalancer:
            servers:
            - url: "http://127.0.0.1:80/"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair
  labels:
    app: acmeair
spec:
  replicas: 1
  template:
    metadata:
      name: acmeair
      labels:
        app: acmeair
    spec:
      containers:
        - name: proxy
          image: traefik
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
            - containerPort: 9901
          volumeMounts:
            - mountPath: /etc/traefik/traefik.yaml
              subPath: traefik.yaml
              name: traefik-config
            - mountPath: /etc/traefik/traefik-dynamic.yaml
              subPath: traefik-dynamic.yaml
              name: traefik-dynamic
        - name: acmeair
          image: liberty-acmeair-k8s
          imagePullPolicy: Never
          readinessProbe:
            httpGet:
              port: 80
              path: /acmeair-webapp/
            initialDelaySeconds: 30
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 80
          envFrom:
            - configMapRef:
                name: acmeair-config
          volumeMounts:
            - mountPath: /etc/acmeair-config
              name: acmeair-config
            - mountPath: /config/jvm.options
              subPath: jvm.options
              name: jvm-config
      restartPolicy: Always
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
        - name: traefik-dynamic
          configMap:
            name: traefik-dynamic
        - name: acmeair-config
          configMap:
            name: acmeair-config-prod
        - name: jvm-config
          configMap:
            name: jvm-config-prod
  selector:
    matchLabels:
      app: acmeair
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair
spec:
  selector:
    app: acmeair
  ports:
    - port: 8888
      targetPort: 8888
      nodePort: 30080
      name: app
    - port: 9901
      targetPort: 9901
      name: smarttuning
      nodePort: 30091
  type: NodePort
