optimization/k8s-automation/k8s-files/tuning-deployment.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: smarttuning-config
data:
  MONGO_ADDR: 'mongo-workload-service.default.svc.cluster.local'
  MONGO_PORT: '27017'
  MONGO_DB: 'smarttuning'
  PROMETHEUS_ADDR: 'prometheus-service.kube-monitoring.svc.cluster.local'
  PROMETHEUS_PORT: '9090'
  NAMESPACE: 'default'
  NAMESPACE_PROD: 'default'
  POD_REGEX: 'acmeair-tuning.*'
  POD_PROD_REGEX: 'acmeair-tuningprod.*'
  WAITING_TIME: '900'
  CONFIG_PATH: '/etc/smart-tuning'
  SEARCHSPACE_PATH: '/etc/tuning-search-space/search-space.json'
  CONFIGMAP_NAME: 'acmeair-config'
  CONFIGMAP_PROD_NAME: 'acmeair-config-prod'
  MOCK: 'False'
  K: '1'
  SAMPLE_SIZE: '0.6667'
  NUMBER_ITERATIONS: '1'
  METRIC_THRESHOLD: '0.0'
  REGISTER_SERVER_PORT: '5000'
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smarttuning
  labels:
    app: smarttuning
    config: "0"
spec:
  replicas: 1
  template:
    metadata:
      name: smarttuning
      labels:
        app: smarttuning
    spec:
      containers:
        - name: smarttuning
          image: smarttuning
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          envFrom:
            - configMapRef:
                name: acmeair-config
            - configMapRef:
                name: smarttuning-config
          volumeMounts:
            - mountPath: /etc/smart-tuning
              name: smart-tuning-config
            - mountPath: /etc/tuning-search-space/search-space.json
              name: tuning-search-space
              subPath: search-space.json
      volumes:
        - name: smart-tuning-config
          configMap:
            name: acmeair-config
        - name: tuning-search-space
          configMap:
            name: tuning-search-space
  selector:
    matchLabels:
      app: smarttuning
---
apiVersion: v1
kind: Service
metadata:
  name: smarttuning-service
spec:
  selector:
    app: smarttuning
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30050
      protocol: TCP
      name: register
  type: NodePort
